cookie z-index fix

--- a/styles/components/cookie.scss
+++ b/styles/components/cookie.scss
@@ -1,4 +1,6 @@
 .otCookiesNotification {
+    position: relative;
+    z-index: 3147483647;
     #cookies-wrapper {
         width: 400px;
         left: 20px;
